Fix enlaces relativos para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <body>
   <h1>📚 Tests disponibles</h1>
   <div class="menu">
-    <a href="./proteccion-civil/">Protección Civil</a>
-    <a href="./seguridad-privada/">Seguridad Privada</a>
+    <a href="proteccion-civil/">Protección Civil</a>
+    <a href="seguridad-privada/">Seguridad Privada</a>
   </div>
 </body>
 </html>
