Actualiza index.html

--- a/seguridad-privada/index.html
+++ b/seguridad-privada/index.html
@@ -625,7 +625,7 @@ const RAW = [
   {
     q: "32. ¿Las empresas de seguridad privada pueden realizar labores de investigación privada?",
     options: ["SI, SIEMPRE", "SI EN DETERMINADOS CASOS", "NO", "NO SALVO QUE LO SOLICITEN"],
-    correct: 1
+    correct: 2
   },
   {
     q: "33. Las prohibiciones que establece el artículo 10 de dicha ley tienen en común:",
@@ -1299,7 +1299,7 @@ const RAW = [
   },
   {
     q: "5. (Doc 4) En referencia a las competencias relativas a armamento y munición que la Guardia Civil... ¿cuál es correcta?",
-    options: ["Autorización e inspección de armeros, tanto de armas como de munición", "Expedición y control de los ejercicios de tiro", "Todas las respuestas son verdaderas."],
+    options: ["Autorización e inspección de armeros, tanto de armas como de munición", "Supervision y control", "Todas las respuestas son verdaderas."],
     correct: 2,
     lock: true
   },
