--- a/seguridad-privada/index.html
+++ b/seguridad-privada/index.html
@@ -870,7 +870,7 @@ const RAW = [
   {
     q: "78. Los jefes de seguridad en el ámbito de sus funciones le corresponde:",
     options: ["CONTROL DEL FUNCIONAMIENTO Y MANTENIMIENTO DE LOS SISTEMAS DE SEGURIDAD PRIVADA", "IDENTIFICACION, ANALISIS Y EVALUACION DE SITUACIONES DE RIESGO...", "ORGANIZACIÓN, DIRECCIÓN , INSPECCIÓN Y ADMINISTRACIÓN DE LOS SERVICIOS Y RECURSOS DE SEGURIDAD PRIVADA DISPONIBLES.", "LA RESPONSABILIDAD SOBRE LA CUSTODIA Y EL TRASLADO DE ARMAS..."],
-    correct: 2
+    correct: 4
   },
   {
     q: "79. Las empresas de seguridad, despachos de detectives y el personal de seguridad privada:",
@@ -1048,7 +1048,7 @@ const RAW = [
     q: "2. (Doc 2) En referencia a las competencias en materia de armamento y munición a la Guardia Civil le compete:",
     options: ["Autorización e inspección de armeros, tanto de armas como de munición.", "Expedición y control de los ejercicios de tiro.", "Todas correctas"],
     correct: 3,
-    lock: true
+    lock: 3
   },
   {
     q: "3. (Doc 2) Entre las cuestiones reseñables del preámbulo de la actual LSP, cuál de las siguientes no está contemplada:",
