Correcion errores preguntas Telegram

--- a/proteccion-civil/index.html
+++ b/proteccion-civil/index.html
@@ -1841,10 +1841,16 @@ const RAW = [
     lock: true
   },
   {
-    q: "248.-La teoría de la sociedad del riesgo fue propugnada por:",
-    options: ["Ulrich back", "Ulrich beck", "Ulrich bock", "Ulrich buck"],
-    correct: 1
+    q: "248.- La teoría de la sociedad del riesgo fue propugnada por:",
+    options: [
+      "Ulrich Beck",
+      "Anthony Giddens",
+      "Zygmunt Bauman",
+      "Manuel Castells"
+    ],
+    correct: 0
   },
+
   {
     q: "249.-Según Beck, la sociedad del riesgo es:",
     options: ["La sociedad del riesgo puede entenderse como una fase de desarrollo de la sociedad moderna en la que los riesgos tienden a escapar de la esfera de acción de las instituciones de control.", "Fase sociedad tradicional", "Riesgos tienden mantenerse en control moderno", "Riesgos tienden mantenerse en control tradicional"],
