Nueva asignatura Gestion de Organizaciones

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!-- Force redeploy -->
 <!doctype html>
 <html lang="es">
@@ -43,6 +42,7 @@
   <div class="menu">
     <a href="proteccion-civil/">Protección Civil</a>
     <a href="seguridad-privada/">Seguridad Privada</a>
+    <a href="gestion-organizaciones/">Gestión de Organizaciones</a>
   </div>
 </body>
 </html>
